2006-03-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): give display-str a default value.

2006-03-24  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): remove &key

	* input.lisp (read-one-line): remove done var

	* core.lisp (*top-map*): moved from user.lisp
	(tree-x): dont accept a screen arg. all callers updated.
	(tree-y): likewise
	(tree-width): likewise
	(tree-height): likewise
	(tree-row-split): likewise
	(tree-column-split): likewise
	(expand-tree): likewise
	(join-subtrees): likewise
	(remove-frame): likewise

2006-03-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (remove-split): sync all frames
	("resize"): new command
	(*root-map*): bind "Space" not " "

	* core.lisp (tree-iterate): new function
	(join-subtrees): tighten up code
	(depth-first-search): new function
	(spree-root-branch): likewise
	(resize-frame): likewise

2006-03-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind "c" to "exec xterm". bind "other" to C-t

	* kmap.lisp (parse-char-name): return the char-code

	* input.lisp (code-state->key): store char as a char-code. all callers updated.

	* core.lisp (:key-press): make sure cmd isn't nil

2006-03-02  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (ungrab-keys-on-window): pass :any correctly.
	(grab-keys-on-window): grab all keybindings in *top-map*
	(sync-keys): new defun
	(handle-keymap): new defun
	(handle-command-key): remove defun
	(:key-press): lookup key event in *top-map* and execute matching command.

	* kmap.lisp (x11-mods): new defun

	* primitives.lisp (key-binding): remove defstruct
	(*key-bindings*): remove defvar

	* stumpwm.lisp (stumpwm): do not call set-key-binding

	* user.lisp (*root-map*): new key map
	(set-key-binding): remove defun
	("curframe"): new command
	("echo"): likewise
	(set-default-bindings): remove defun

	* stumpwm.lisp (stumpwm-internal-loop): listen for events and process them when they come in.
